note book update

--- a/index.ipynb
+++ b/index.ipynb
@@ -1,6 +1,52 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BRAND SENTIMENT PREDICTOR"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Business Understanding\n",
+    "A brand name or identity is now considered among the most valuable asset for a going concern. According to Wikipedia , A brand is a name, term, design, symbol or any other feature that distinguishes one seller's good or service from those of other sellers.Brands are used in business, marketing, and advertising for recognition and, importantly, to create and store value as brand equity for the object identified, to the benefit of the brand's customers, its owners and shareholders.\n",
+    "Consequently, in is important to business owners or brand owners to know and understand how their current and potential perceive heir brand. This information would feed into their strategy on how to enhance, protect, course correct, where applicable on the status of their brand."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Business Problem\n",
+    "Brand perception by current and would customer is key to a business success. A negative brand perception, especially, in this current age of social media and interconnectedness, can quickly wipe out the value of a company within a short time. And conversely, a positive perception can quickly add value to a company. Therefore, being able to gauge how people feel and perceive about one’s brand is a great asset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Objective \n",
+    "To develop a Natural language multiclassification model based upon customer sentiments."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Understanding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Summary"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 94,
    "metadata": {},
@@ -3472,7 +3518,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "learn-env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
